<resources>
    <string name="app_name">CAAT App</string>
    <string name="caat">Centro Academico</string>
    <string name="prof">Professores do Departamento</string>
    <!-- Buttons -->
    <string name="calc90">Calcular 90h/60h</string>
    <string name="calc30">Calcular 30h</string>
    <string name="irCA">Ver membros do CA</string>
    <string name="irProf">Ver professores</string>
    <string name="tituloFalar">Assunto</string>
    <string name="qFalar">O que manda?</string>

    <!-- String dos arrays-->
...
