<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:id="@+id/nota1"
        android:hint="Primeira nota"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/nota2"
        android:hint="Segunda nota"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:id="@+id/nota3"
        android:hint="Terceira nota"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:id="@+id/btCalc90"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estou aqui"
        android:layout_gravity="center"
        android:id="@+id/text90"/>

</LinearLayout>